--- a/ODK.Web.Razor/Views/Shared/Components/_Icon.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Components/_Icon.cshtml
@@ -25,6 +25,8 @@
         <i class="@Model.Class fa-solid fa-check"></i>break;
     case IconType.CheckCircle:
         <i class="@Model.Class fa-solid fa-circle-check"></i>break;
+    case IconType.CheckCircleOutline:
+        <i class="@Model.Class fa-regular fa-circle-check"></i>break;
     case IconType.ChevronRight:
         <i class="@Model.Class fa-solid fa-chevron-right"></i>break;    
     case IconType.CircleNotch:
