--- a/ODK.Web.Razor/Views/Shared/Admin/Events/Event/_EventInvitesContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Events/Event/_EventInvitesContent.cshtml
@@ -45,9 +45,13 @@
                 <button type="submit" class="btn btn-secondary">Send test</button>
             </form>
         </div>        
-        <p class="text-muted ms-1">
-            Emails are batched and sent to your admin email address with members included on BCC.
-            You will receive 1 email per batch as the admin recipient + your member invite.
+        <p>
+            @{
+                var subtitle = 
+                    "Emails are batched and sent to your admin email address with members included on BCC. " +
+                    "You will receive 1 email per batch as the admin recipient + your member invite.";
+            }
+            @await Html.PartialAsync("Components/_FormLabelSubtitle", subtitle)
         </p>
     </div>    
 
