--- a/ODK.Web.Razor/Views/Shared/Admin/Payments/_AccountContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Payments/_AccountContent.cshtml
@@ -31,7 +31,7 @@
     }
     else if (!string.IsNullOrEmpty(Model.OnboardingUrl))
     {
-        <a href="@Model.OnboardingUrl">Resume setup</a>
+        <a href="@Model.OnboardingUrl" class="btn btn-primary">Resume setup</a>
     }
     else
     {
