(group create): add map; simplify wizard steps

--- a/ODK.Web.Razor/Pages/Contact.cshtml
+++ b/ODK.Web.Razor/Pages/Contact.cshtml
@@ -1,7 +1,7 @@
 ﻿@page "/Contact"
 @using ODK.Web.Razor.Models.Components
 @using ODK.Web.Razor.Models.Contact
-@model ODK.Web.Razor.Pages.ContactModel
+@model ContactModel
 @{
     Layout = "_HomeLayout";
     Model.Title = "Contact";
