--- a/ODK.Web.Razor/Views/Shared/Groups/_GroupCreateForm.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Groups/_GroupCreateForm.cshtml
@@ -1,4 +1,5 @@
-﻿@using ODK.Web.Common.Extensions
+﻿@using ODK.Core.Countries
+@using ODK.Web.Common.Extensions
 @using ODK.Web.Razor.Models.Admin.Chapters
 @using ODK.Web.Razor.Models.Chapters
 @using ODK.Web.Razor.Models.Components
@@ -30,12 +31,6 @@
                         @Html.TextBoxFor(x => x.Name, new { @class = "form-control" })
                         @Html.ValidationMessageFor(x => x.Name)
                     </div>
-
-                    <div class="form-group mb-3 required">
-                        @Html.LabelFor(x => x.Description, new { @class = "form-label" })
-                        @Html.TextAreaFor(x => x.Description, new { @class = "form-control", rows = 6, data_html_editor = "" })
-                        @Html.ValidationMessageFor(x => x.Description)
-                    </div>
                 </div>
         },
         new WizardPageViewModel
@@ -61,29 +56,17 @@
             Title = "Location",
             ContentFunc = 
                 @<div>
-                    <div class="form-group mb-3 required" data-location-container>
-                        @Html.LabelFor(x => x.Location.LocationName, new { @class = "form-label" })
-                        <div class="input-group">
-                            <span class="input-group-text">
-                                <span data-bs-toggle="tooltip" data-bs-title="Location">
-                                    @await Html.PartialAsync("Components/_Icon", new IconViewModel(IconType.LocationPin))
-                                </span>
-                            </span>
-
-                            <div class="dropdown flex-grow-1">
-                                @Html.TextBoxFor(x => x.Location.LocationName, new 
-                                { 
-                                    @class = "form-control", 
-                                    data_location = ""
-                                })
-
-                                <ul class="dropdown-menu google-places-suggestions" data-location-options></ul>
-                            </div>                            
-                        </div>
-                        @Html.ValidationMessageFor(x => x.Location.LocationName)
-                        @Html.HiddenFor(x => x.Location.Lat, new { data_location_lat = "" })
-                        @Html.HiddenFor(x => x.Location.Long, new { data_location_long = "" })
+                    <div class="form-group mb-3 required">
+                        @await Html.PartialAsync("Components/_LocationPicker", Model)                        
                     </div>
+                </div>,
+            FooterFunc = 
+                @<div class="mt-3">
+                    @await Html.PartialAsync("Components/_GoogleMap", new GoogleMapViewModel
+                    {
+                        LatLong = LatLong.FromCoords(Model.Lat, Model.Long),
+                        QuerySource = "#" + Html.IdFor(x => x.LocationName)
+                    })
                 </div>
     },
         new WizardPageViewModel
@@ -96,7 +79,6 @@
                         Required = true
                     })
                 </div>
-
         },
         new WizardPageViewModel
         {
