--- a/ODK.Web.Razor/Views/Shared/Header/_Navbar.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Header/_Navbar.cshtml
@@ -64,7 +64,7 @@
                 {
                     <div class="d-flex gap-4 account-links--right">
                         @await Html.PartialAsync("Header/_NotificationDropdown")
-                        @await Html.PartialAsync("Header/_AccountDropdown", accountMenu)
+                        @await Html.PartialAsync("Header/_OdkAccountDropdown", accountMenu)
                     </div>
                 }
                 else
