--- a/ODK.Web.Razor/Views/Shared/Account/_LoginForm.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_LoginForm.cshtml
@@ -1,4 +1,7 @@
-﻿@model ODK.Web.Razor.Models.Login.LoginViewModel
+﻿@using ODK.Web.Common.Routes
+@using ODK.Web.Razor.Models.Login
+@model LoginViewModel
+@inject IOdkRoutes OdkRoutes
 
 <form method="post" action="@(Model.Chapter != null ? $"/{Model.Chapter.ShortName}" : "")/Account/Login?ReturnUrl=@Model.ReturnUrl">
     @*@Html.AntiForgeryToken()*@
@@ -14,6 +17,6 @@
 
     <div class="d-flex">
         <button type="submit" class="btn btn-primary me-auto">Sign in</button>
-        <a class="btn btn-link" href="/@(Model.Chapter != null ? $"{Model.Chapter.ShortName}/" : null)Account/Password/Forgotten">Forgotten password?</a>
+        <a class="btn btn-link" href="@OdkRoutes.Account.ForgottenPassword(Model.Chapter)">Forgotten password?</a>
     </div>
 </form>        
