--- a/ODK.Web.Razor/Views/Shared/Header/_SiteAccountDropdown.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Header/_SiteAccountDropdown.cshtml
@@ -35,8 +35,8 @@
                 Position = "end",
                 ContentFunc =
                     @<div>
-                        <div class="list-group list-group-flush list-group-border-0">
-                            <a class="list-group-item list-group-item-action" href="/account">
+                        <div class="list-group list-group-flush list-group-border-0">                            
+                            <a class="list-group-item list-group-item-action" href="@OdkRoutes.Account.Index(chapter: null)">
                                 <span class="icon">
                                     @await Html.PartialAsync("Components/_Icon", new IconViewModel(IconType.UserOutline))
                                 </span>
@@ -81,7 +81,7 @@
 
                         <hr/>
                         <div class="list-group list-group-flush list-group-border-0">
-                            <a class="list-group-item list-group-item-action" href="/account/logout">
+                            <a class="list-group-item list-group-item-action" href="@OdkRoutes.Account.Logout(chapter: null)">
                                 <span class="icon">
                                     @await Html.PartialAsync("Components/_Icon", new IconViewModel(IconType.Logout))
                                 </span>
@@ -89,22 +89,7 @@
                             </a>
                         </div>                    
                     </div>,
-                FooterFunc = 
-                    @<div>
-                        <div class="list-group list-group-flush list-group-border-0">
-                            <div class="offcanvas-flush-item"><strong>Appearance</strong></div>
-
-                            <label class="list-group-item list-group-item-action d-flex align-items-center offcanvas-flush-item">
-                                <span class="me-3">Dark mode</span>
-
-                                <span class="d-flex gap-1">
-                                    <span class="form-switch p-0 d-flex align-items-center">
-                                        <input class="form-check-input ms-0 mt-0" type="checkbox" role="switch" data-theme-switch />
-                                    </span>                
-                                </span>
-                            </label>
-                        </div>
-                    </div>
+                FooterFunc = @<div>@await Html.PartialAsync("Header/_AccountDropdownFooter")</div>
             })  
         </div>   
     }    
