--- a/ODK.Web.Razor/wwwroot/css/_offcanvas.scss
+++ b/ODK.Web.Razor/wwwroot/css/_offcanvas.scss
@@ -11,6 +11,26 @@
         margin-top: 0.5rem;
         margin-bottom: 0.5rem;
     }
+
+    &.has-footer {
+        --odk-footer-fade-height: 120px;
+        // add a faded gradient above the footer to show the body scrolling behind it
+        .offcanvas-body {
+            margin-bottom: calc(-1 * var(--odk-footer-fade-height));
+        }
+
+        .offcanvas-footer {
+            z-index: 1;
+
+            &:before {
+                content: '';
+                display: block;
+                height: var(--odk-footer-fade-height);
+                background: linear-gradient(to bottom, transparent, var(--bs-body-bg));
+                pointer-events: none;
+            }
+        }
+    }
 }
 
 .offcanvas-flush {
