--- a/ODK.Web.Razor/Views/Shared/Pricing/_PricingContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Pricing/_PricingContent.cshtml
@@ -19,13 +19,13 @@
     }
 }
 
-<div class="row gap-3">
+<div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4">
     @foreach (var subscriptionViewModel in subscriptions)
     {
         var subscription = subscriptionViewModel.Subscription;
         var prices = subscriptionViewModel.Prices.Where(x => x.CurrencyId == currency.Id);
 
-        <div class="col">
+        <div class="col mb-3">
             <div class="card h-100">
                 <div class="card-body d-flex flex-column">
                     <h5 class="card-title">@subscription.Name</h5>
