--- a/ODK.Web.Razor/Views/Shared/SiteAdmin/_SubscriptionCreateContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SiteAdmin/_SubscriptionCreateContent.cshtml
@@ -15,6 +15,7 @@
         @*@Html.AntiForgeryToken()*@
         @await Html.PartialAsync("SiteAdmin/_SubscriptionForm", new SiteSubscriptionFormViewModel
         {
+            SitePaymentSettingId = sitePaymentSettings.FirstOrDefault(x => x.Active)?.Id,
             SitePaymentSettings = sitePaymentSettings
         })
         <button class="btn btn-primary">Create</button>
