--- a/ODK.Web.Razor/Views/Shared/Account/_SiteSubscriptionContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_SiteSubscriptionContent.cshtml
@@ -69,10 +69,10 @@
         {
             <label class="form-label">Expiry date</label>
             <div class="form-control-plaintext">
-                @if (memberSubscription?.ExpiresUtc != null)
+                @if (memberSubscription?.MemberSiteSubscription.ExpiresUtc != null)
                 {
                     <span>
-                        @memberSubscription.ExpiresUtc.Value.ToFriendlyDateString(null)
+                        @memberSubscription?.MemberSiteSubscription.ExpiresUtc.Value.ToFriendlyDateString(null)
                     </span>
                 }
                 else
@@ -85,10 +85,10 @@
         {
             <label class="form-label">Next payment date</label>
             <div class="form-control-plaintext">
-                @if (memberSubscription?.ExpiresUtc != null)
+                @if (memberSubscription?.MemberSiteSubscription.ExpiresUtc != null)
                 {
                     <span>
-                        @memberSubscription.ExpiresUtc.Value.ToFriendlyDateString(null)
+                        @memberSubscription.MemberSiteSubscription.ExpiresUtc.Value.ToFriendlyDateString(null)
                     </span>
                 }
                 else
@@ -116,7 +116,6 @@
 
         <div class="mb-3">
             <form method="post">
-                <input type="hidden" name="id" value="@memberSubscription.Id" />
                 <p>
                     <button class="btn btn-danger" onclick="return confirm('Are you sure you want to cancel your subscription?');">
                         Cancel subscription
@@ -131,7 +130,7 @@
         </div>
     }
 
-    @if (!subscriptions.Any(x => x.Subscription.Id != Model.CurrentMemberSubscription?.SiteSubscriptionId) && 
+    @if (!subscriptions.Any(x => x.Subscription.Id != Model.CurrentMemberSubscription?.SiteSubscription.Id) && 
         externalSubscription?.Status == ExternalSubscriptionStatus.Active)
     {
         @*Don't show upgrade options if there are no other subscription options than the current active subscription*@
