--- a/ODK.Web.Razor/Views/Shared/Events/_EventList.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Events/_EventList.cshtml
@@ -2,7 +2,7 @@
 @using ODK.Web.Razor.Models.Events
 @model EventListViewModel
 
-<div class="row row-cols-sm-2  row-cols-md-3 row-cols-lg-4">
+<div class="@Model.Class">
     @foreach (var @event in Model.Events)
     {
         <div class="list-event mb-3 @(Model.FullWidth ? "list-event--full-width" : null)">
