--- a/ODK.Web.Razor/Views/Shared/Events/_EventsContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Events/_EventsContent.cshtml
@@ -20,6 +20,7 @@
     @await Html.PartialAsync("Events/_EventList", new EventListViewModel
     {
         Chapter = Model.Chapter,
+        Class = "row row-cols-sm-2 row-cols-md-3 row-cols-lg-4",
         Events = Model.Events,
         FullWidth = true,
         Platform = Model.Platform,
