--- a/ODK.Web.Razor/Views/Shared/Notifications/_NotificationListContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Notifications/_NotificationListContent.cshtml
@@ -13,14 +13,15 @@
 @if (notifications.Count > 0)
 {
     <div class="notification-items">
-        @foreach (var notification in notifications)
+        @foreach (var dto in notifications)
         {
+            var notification = dto.Notification;
             var group = notification.Type.Group();
             <div class="notification-item @Model.ItemClass border-top" 
                 data-notification data-notification-group="@group">
                 @await Html.PartialAsync("Notifications/_NotificationListItem", new NotificationListItemViewModel
                 {
-                    Notification = notification
+                    Notification = dto
                 })
             </div>
         }
